css/main.scss
---
---

@import 'constants';

html {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 18px;
}

body {
  margin: 0 auto;
  padding: 0;
  width: 100%;
  background-color: $BACKGROUND;

  font: normal $TEXT-SIZE-MOBILE $FONT-TEXT;
  color: $TEXT-COLOR;

  @include media-query(DESKTOP) {
    font: normal $TEXT-SIZE $FONT-TEXT;
  }
}

strong {
  font-weight: bold;
}

em {
  font-style: italic;
}

s {
  text-decoration:line-through;
}

i.fa-1_5x {
  font-size: 1.5em;
}

a {
  font: normal $TEXT-SIZE $FONT-TEXT;
  color: $LINK-COLOR;
  cursor: pointer;
  text-decoration: none;
  transition: color $TRANSITION-PERIOD linear;

  &:visited {
    color: $LINK-COLOR-VISITED;
  }

  &:hover {
    color: $LINK-COLOR-HOVER;
  }
}

.social-item {
  padding: 0;
  font-size: $MENU-ITEM-SIZE;
  font-weight: normal;
  color: $MENU-TEXT-COLOR;
  text-transform: none;
  display: inline;

  @include media-query(DESKTOP) {
    font-size: $MENU-ITEM-SIZE;
  }

  &:visited {
    color: $MENU-TEXT-COLOR;
  }

  &:hover {
    color: $MENU-TEXT-HOVER-COLOR;
  }
}

.main-div {
  display: block;
  width: 80%;
  box-sizing: border-box;
  margin: $RESPONSIVE-SPACING auto;

  .home-title {
    border-bottom: 1px #000 dashed;
    margin: $RESPONSIVE-SPACING auto;
    font: normal 2.8rem $FONT-TITLE;
    text-align: center;

    @include media-query(DESKTOP) {
      font: normal 7rem $FONT-TITLE;
      line-height: 1;
    }
  }

  .page-title {
    color: $MENU-TEXT-COLOR;
    line-height: 1;
    text-align: left;
    text-transform: uppercase;
    font: 900 $TITLE-SIZE-MOBILE $FONT-TITLE;

    @include media-query(DESKTOP) {
      font: 900 $TITLE-SIZE $FONT-TITLE;
    }
  }

  .page-content {
    text-align: justify;
    a {
      text-decoration: underline;
      font-weight: bold;
    }

    img {
      display: block;
      margin: 0 auto;
      width: 100%;
    }
  }
}

.home-main-div {
  .jar-item {
    width: 100%;
    left: 0;
    top: 0;
    cursor: pointer;
    img {
      width: 100%;
    }
  }

  .jar-item-small {
    width: 66%;
    margin: 0 auto;
    left: 0;
    right: 0;
    padding-top: 20%;
  }

  .content-title {
    padding-left: 2px;
    text-transform: uppercase;

    font: normal 0.7*$TITLE-SIZE-MOBILE $FONT-TITLE;
    @include media-query(DESKTOP) {
      font: normal 0.7*$TITLE-SIZE $FONT-TITLE;
    }
  }
}

.home-jar-container{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;

  @include media-query(DESKTOP) {
    flex-wrap: nowrap;
  }

  .jar-overlay {
    width: 24%;
    padding-bottom: 24%;
    margin-bottom: 4vw;
    position: relative;
    opacity: 1;
    transition: opacity $TRANSITION-PERIOD-ICON linear;

    @include media-query(DESKTOP) {
      width: 12%;
      padding-bottom: 12%;
    }

    &:hover {
      opacity: 0.5;
    }

    .jar-item {
      position: absolute;
    }
  }

  .jar-selected {
    opacity: 0.5;
  }
}

.home-jar-navigation {
  width: 80%;
  max-height: 0;
  opacity: 0;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: center;
  overflow: hidden;
  transition: max-height $TRANSITION-PERIOD-HOME linear, opacity $TRANSITION-PERIOD-HOME $TRANSITION-PERIOD-HOME linear;

  .jar-item {
    position: relative;
    width: 30%;
    opacity: 1;
    transition: opacity $TRANSITION-PERIOD-ICON linear;

    &:hover {
      opacity: 0.5;
    }
  }

  .jar-navigation-title {
    text-align: center;
    text-transform: uppercase;
    font: normal $LINK-SIZE-MOBILE $FONT-TITLE;

    @include media-query(DESKTOP) {
      font: normal $TITLE-SIZE $FONT-TITLE;
    }
  }
}

.list-item {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 80%;
  margin: 5% 0;

  .list-image {
    width: 20%;
    img {
      width: 100%;
    }
  }

  .list-text {
    padding: 8px 5%;
    .list-text-title {
      text-transform: uppercase;
      font-weight: 900;
    }
  }
}
.list-item:last-child {
  margin-bottom: 0;
}

.content-mapa, .content-ingredientes, .content-receita {
  max-height: 0;
  overflow: hidden;
  transition: max-height $TRANSITION-PERIOD-HOME linear;
}

.home-section {
  width: 100%;
  border-top: 1px #000 dashed;
}

.home-section-image {
  width: 100%;
  padding-bottom: 0;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: contain;
}

.home-map-container {
  display: flex;
  flex-direction: row;
}

.home-map-image {
  width: 50%;
  background-image: url('{{ site.baseurl }}/media/icons/mapa.png');
}

.home-umap-image {
  width: 50%;
}

.recipe-search-button-container {
  margin: 12px 0;
}

.recipe-search-button-group {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  margin: 10px 0;
}

.recipe-search-button {
  background-color: #fff;
  color: #000;
  padding: 8px 16px;
  border: 1px #000 solid;
  margin-right: 10px;
  border-radius: 4px;
  box-shadow: 2px 2px 2px 0 #444;
  cursor: pointer;
  user-select: none;
  transition: all $TRANSITION-PERIOD linear;

  &:hover {
    background-color: #eee;
    box-shadow: 4px 4px 4px 0 #666;
  }
  &:last-child {
    margin-right: 0;
  }
}

.recipe-search-button-disabled {
  color: #ccc;
  border: 1px #ccc solid;
  box-shadow: none;
  cursor: auto;
  pointer-events: none;

  &:hover {
    background-color: #fff;
    box-shadow: none;
  }
}

.hidden-checkbox:checked + .recipe-search-button {
  background-color: #000;
  color: #fff;
}

.recipe-search-result-item {
  text-align: left;
  text-transform: uppercase;
  font: normal $LINK-SIZE-MOBILE*2 $FONT-TITLE;
  font-weight: bold;
  display: block;
}

.hidden-checkbox {
  display: none;
}

.footer {
  margin: 0 auto;
  box-sizing: border-box;
  width: 80%;
  padding: 12px 0;
  border-top: 1px #000 dashed;

  .footer-line {
    line-height: 1.7;
    vertical-align: middle;
  }

  a.footer-line {
    text-decoration: underline;
    font-weight: 200;
  }

  .silo-logo {
    height: 100px;
    margin-top: 8px;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: left center;
  }
}

.share-container {
  margin: 1vw 0;
  .share-icon-container {
    a {
      text-decoration: none;
    }
    a + a {
      margin-left: 6px;
    }
  }
}

.swipebox-gallery {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-justify-content: center;
  justify-content: center;

  .swipebox {
    margin: 1% 1%;
    width: 45%;

    @include media-query(DESKTOP) {
      width: 48%;
    }

    img {
      width: 100%;
    }
  }
}

.video-wrapper-16x9 {
  padding-bottom: 56.25%;
}

.video-wrapper-4x3 {
  padding-bottom: 75%;
}

.video-wrapper {
  position: relative;
  margin: 1rem auto;
  height: 0;
  overflow: hidden;

  iframe {
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

